# KuriLogin

./: Cargo.toml  Dockerfile  README.md  docker-compose.yaml  start.sh
migrations/: 001_init_db.up.sql  002_add_google_provider.up.sql
src/: error.rs  main.rs
src/modules/auth/: app_service.rs  mod.rs
src/modules/auth/api/: handler.rs  routes_config.rs
src/modules/auth/domain/: error.rs  models.rs  ports.rs
src/modules/auth/infrastructure/: db_adapter.rs  google_provider.rs  mod.rs
src/modules/user/: app_service.rs
src/modules/user/api/: handler.rs  mod.rs  routes_config.rs
src/modules/user/domain/: error.rs  mod.rs  models.rs  ports.rs
src/modules/user/infrastructure/: db_adapter.rs  mod.rs
src/utils/: config.rs  postgres.rs
